Register plan visualizer as an agent
- Add schema for plan visualization actions
- Move code from packages to agents folder
- Update build scripts

--- a/ts/packages/agents/planVisualizer/src/view/client/tsconfig.json
+++ b/ts/packages/agents/planVisualizer/src/view/client/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "extends": "../../tsconfig.json",
+    "extends": "../../../tsconfig.json",
     "compilerOptions": {
-      "outDir": "../../dist/server",
+      "outDir": "../../../dist/view/public/js",
       "rootDir": ".",
-      "lib": ["ES2020", "DOM"], 
+      "lib": ["DOM", "ES2020", "DOM.Iterable"]
     },
     "include": ["./**/*.ts", "../shared/**/*.ts"],
     "references": [
