--- a/ts/packages/agents/planVisualizer/package.json
+++ b/ts/packages/agents/planVisualizer/package.json
@@ -36,8 +36,7 @@
     "cytoscape-dagre": "^2.5.0",
     "dagre": "^0.8.5",
     "debug": "^4.4.0",
-    "express": "^4.18.2",
-    "typeagent": "workspace:*"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
