linting config files

--- a/ts/packages/agents/planVisualizer/src/view/client/tsconfig.json
+++ b/ts/packages/agents/planVisualizer/src/view/client/tsconfig.json
@@ -1,12 +1,10 @@
 {
-    "extends": "../../../tsconfig.json",
-    "compilerOptions": {
-      "outDir": "../../../dist/view/public/js",
-      "rootDir": ".",
-      "lib": ["DOM", "ES2020", "DOM.Iterable"]
-    },
-    "include": ["./**/*.ts", "../shared/**/*.ts"],
-    "references": [
-      { "path": "../shared" }
-    ]
-  }
+  "extends": "../../../tsconfig.json",
+  "compilerOptions": {
+    "outDir": "../../../dist/view/public/js",
+    "rootDir": ".",
+    "lib": ["DOM", "ES2020", "DOM.Iterable"]
+  },
+  "include": ["./**/*.ts", "../shared/**/*.ts"],
+  "references": [{ "path": "../shared" }]
+}
