--- a/ts/packages/agents/planVisualizer/tsconfig.json
+++ b/ts/packages/agents/planVisualizer/tsconfig.json
@@ -1,8 +1,8 @@
 {
-    "extends": "../../../tsconfig.base.json",
-    "compilerOptions": {
-"composite": true,
-    },    
+  "extends": "../../../tsconfig.base.json",
+  "compilerOptions": {
+    "composite": true
+  },
   "ts-node": {
     "esm": true
   },
@@ -10,9 +10,9 @@
     { "path": "./src/agent" },
     { "path": "./src/view/client" },
     { "path": "./src/view/server" },
-    { "path": "./src/view/shared" }    
+    { "path": "./src/view/shared" }
   ],
-  
-      "lib": ["DOM", "ES2020", "DOM.Iterable"],
-    "exclude": ["node_modules", "dist", "public/js"]
-  }
+
+  "lib": ["DOM", "ES2020", "DOM.Iterable"],
+  "exclude": ["node_modules", "dist", "public/js"]
+}
