--- a/ts/packages/agents/planVisualizer/src/agent/tsconfig.json
+++ b/ts/packages/agents/planVisualizer/src/agent/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "rootDir": ".",
-    "outDir": "../../dist/agent",
+    "outDir": "../../dist/agent"
   },
   "include": ["./**/*"],
   "ts-node": {
