--- a/ts/packages/shell/package.json
+++ b/ts/packages/shell/package.json
@@ -86,12 +86,12 @@
     "typescript": "~5.4.5",
     "vite": "^6.2.7"
   },
-  "productName": "TypeAgent Shell",
   "pnpm": {
     "supportedArchitectures": {
       "cpu": [
         "arm64"
       ]
     }
-  }
+  },
+  "productName": "TypeAgent Shell"
 }
