--- a/ts/packages/planVisualizer/package.json
+++ b/ts/packages/planVisualizer/package.json
@@ -18,9 +18,9 @@
     "build:server": "tsc -p src/server/tsconfig.json",
     "build:shared": "tsc -p src/shared/tsconfig.json",
     "clean": "rimraf dist public/js",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npx nodemon --experimental-specifier-resolution=node dist/server/server.js --dev \"",
-    "dev:client": "vite",
-    "dev:server": "tsc -p src/server/tsconfig.json --watch",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npx nodemon --experimental-specifier-resolution=node dist/view/server/server.js --dev \"",
+    "dev:client": "vite dev",
+    "dev:server": "tsc -p src/view/server/tsconfig.json --watch",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
     "preview:client": "vite preview",
