Fix postinstall script for linux (#1075)

--- a/ts/package.json
+++ b/ts/package.json
@@ -58,6 +58,14 @@
     "node": ">=20",
     "pnpm": ">=10"
   },
+  "pnpm": {
+    "supportedArchitectures": {
+      "cpu": [
+        "x64",
+        "arm64"
+      ]
+    }
+  },
   "peerDependencyRules": {
     "ignoreMissing": [
       "eslint"
