--- a/ts/packages/agents/planVisualizer/package.json
+++ b/ts/packages/agents/planVisualizer/package.json
@@ -17,11 +17,12 @@
   },
   "scripts": {
     "build": "npm run build:shared && npm run build:server && npm run build:agent && npm run build:client",
+    "postbuild": "copyfiles -u 1 \"src/**/config.json\" dist",
     "build:agent": "tsc -p src/agent/tsconfig.json",
     "build:client": "vite build",
     "build:server": "tsc -p src/view/server/tsconfig.json",
     "build:shared": "tsc -p src/view/shared/tsconfig.json",
-    "clean": "rimraf dist public/js",
+    "clean": "rimraf dist public/js *.tsbuildinfo *.done.build.log",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npx nodemon --experimental-specifier-resolution=node dist/view/server/server.js --dev \"",
     "dev:client": "vite dev",
     "dev:server": "tsc -p src/view/server/tsconfig.json --watch",
@@ -47,6 +48,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.10",
     "concurrently": "^9.1.2",
+    "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
