Register agent with dispatcher

--- a/ts/packages/defaultAgentProvider/data/config.json
+++ b/ts/packages/defaultAgentProvider/data/config.json
@@ -50,6 +50,9 @@
     "oracle": {
       "name": "oracle-agent"
     },
+    "planVisualizer":{
+      "name": "plan-visualizer"
+    },
     "spelunker": {
       "name": "spelunker-agent"
     }
