--- a/ts/packages/defaultAgentProvider/data/config.json
+++ b/ts/packages/defaultAgentProvider/data/config.json
@@ -52,6 +52,9 @@
     },
     "spelunker": {
       "name": "spelunker-agent"
+    },
+    "planVisualizer": {
+      "name": "plan-visualizer"
     }
   },
   "mcpServers": {
