Enable HMR for plan viewer (#1080)
- Update build scripts and vite config

--- a/ts/packages/agents/planVisualizer/src/view/client/tsconfig.json
+++ b/ts/packages/agents/planVisualizer/src/view/client/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "outDir": "../../../dist/view/public/js",
     "rootDir": ".",
+    "declarationMap": false,
+    "moduleResolution": "bundler",
+      "module": "ESNext",
     "lib": ["DOM", "ES2020", "DOM.Iterable"]
   },
   "include": ["./**/*.ts", "../shared/**/*.ts"],
