--- a/ts/packages/agents/montage/src/agent/montageManifest.json
+++ b/ts/packages/agents/montage/src/agent/montageManifest.json
@@ -4,6 +4,9 @@
   "schema": {
     "description": "Photo montage agent to help the user with image management.",
     "schemaFile": "./montageActionSchema.ts",
-    "schemaType": "MontageAction"
+    "schemaType": {
+      "action": "MontageAction",
+      "activity": "MontageActivity"
+    }
   }
 }
