--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -321,8 +321,8 @@
         "--runTestsByPath",
         "${jest.testFile}"
       ],
-      "cwd": "${workspaceFolder}/packages/knowpro",
-      //"cwd": "${workspaceFolder}/packages/memory/storage",
+      //"cwd": "${workspaceFolder}/packages/knowpro",
+      "cwd": "${workspaceFolder}/packages/memory/storage",
       //"cwd": "${workspaceFolder}/packages/memory/conversation",
       //"cwd": "${workspaceFolder}/packages/knowledgeProcessor",
       //"cwd": "${workspaceFolder}/packages/aiclient",
