--- a/ts/packages/agents/planVisualizer/package.json
+++ b/ts/packages/agents/planVisualizer/package.json
@@ -37,7 +37,8 @@
     "cytoscape-dagre": "^2.5.0",
     "dagre": "^0.8.5",
     "debug": "^4.4.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
