--- a/ts/examples/examplesLib/package.json
+++ b/ts/examples/examplesLib/package.json
@@ -31,6 +31,7 @@
     "chalk": "^5.4.1",
     "dotenv": "^16.3.1",
     "interactive-app": "workspace:*",
+    "knowpro": "workspace:*",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1"
   },
