--- a/ts/packages/agents/markdown/src/agent/markdownManifest.json
+++ b/ts/packages/agents/markdown/src/agent/markdownManifest.json
@@ -1,6 +1,7 @@
 {
   "emojiChar": "🗎",
   "description": "Agent to create and update markdown files",
+  "localView": true,
   "schema": {
     "description": "Markdown editing agent that updates documents using Github markdown flavor.",
     "schemaFile": "./markdownActionSchema.ts",
