--- a/ts/packages/agents/planVisualizer/src/agent/planViewManifest.json
+++ b/ts/packages/agents/planVisualizer/src/agent/planViewManifest.json
@@ -1,6 +1,8 @@
 {
   "emojiChar": "🕸",
   "description": "Agent to visualize static and dynamic Plans",
+  "localView": true,
+  "sharedLocalView": "browser",
   "schema": {
     "description": "A webPlan visualization agent, that handles static and dynamic plans.",
     "schemaFile": "./planViewActionSchema.ts",
