--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -24,6 +24,7 @@
     "package": "node scripts/packExtension.mjs",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
+    "test": "jest",
     "tsc:agent": "tsc -p src/agent/tsconfig.json",
     "tsc:common": "tsc -p src/common/tsconfig.json",
     "tsc:puppeteer": "tsc -p src/puppeteer/tsconfig.json",
@@ -60,7 +61,9 @@
     "@types/chrome": "^0.0.256",
     "@types/debug": "^4.1.12",
     "@types/html-to-text": "^9.0.4",
+    "@types/jest": "^29.5.7",
     "@types/jquery": "^3.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonpath": "0.2.4",
     "@types/node": "^20.10.4",
     "@types/prismjs": "^1.26.3",
@@ -71,8 +74,12 @@
     "dotenv": "^16.5.0",
     "find-up": "^7.0.0",
     "fs-extra": "^11.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
     "rimraf": "^6.0.1",
     "rollup-plugin-copy": "^3.5.0",
+    "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.1",
     "typescript": "~5.4.5",
     "vite": "^5.4.19"
