--- a/ts/packages/agents/browser/package.json
+++ b/ts/packages/agents/browser/package.json
@@ -75,6 +75,7 @@
     "find-up": "^7.0.0",
     "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
+    "jest-chrome": "^0.8.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
     "rimraf": "^6.0.1",
