--- a/ts/packages/actionSchemaCompiler/package.json
+++ b/ts/packages/actionSchemaCompiler/package.json
@@ -17,7 +17,8 @@
     "asc-dev": "./bin/dev.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "!dist/test"
   ],
   "scripts": {
     "build": "npm run tsc",
