--- a/ts/packages/agents/agentUtils/graphUtils/package.json
+++ b/ts/packages/agents/agentUtils/graphUtils/package.json
@@ -17,7 +17,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "!dist/test"
   ],
   "scripts": {
     "build": "npm run tsc",
