--- a/ts/packages/commonUtils/package.json
+++ b/ts/packages/commonUtils/package.json
@@ -18,6 +18,10 @@
     },
     "./ws": "./dist/webSockets.js"
   },
+  "files": [
+    "dist",
+    "!dist/test"
+  ],
   "scripts": {
     "build": "npm run tsc",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
