--- a/ts/packages/telemetry/package.json
+++ b/ts/packages/telemetry/package.json
@@ -16,6 +16,10 @@
       "node": "./dist/indexNode.js"
     }
   },
+  "files": [
+    "dist",
+    "!dist/test"
+  ],
   "scripts": {
     "build": "npm run tsc",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
