--- a/ts/package.json
+++ b/ts/package.json
@@ -38,9 +38,7 @@
     "regen:builtin": "pnpm -C packages/cli run regen:builtin",
     "shell": "pnpm -C packages/shell run start",
     "shell:package": "pnpm -C packages/shell run package",
-    "shell:start:linux": "pnpm -C packages/shell run start:linux",
-    "shell:start:mac": "pnpm -C packages/shell run start:mac",
-    "shell:start:win": "pnpm -C packages/shell run start:win",
+    "shell:start:package": "pnpm -C packages/shell run start:package",
     "shell:test": "npx --prefix packages/shell playwright test simple.spec.ts",
     "test": "pnpm run test:local && pnpm run test:live",
     "test:live": "pnpm -r --no-sort --stream --workspace-concurrency=1 run test:live",
