--- a/ts/packages/aiclient/package.json
+++ b/ts/packages/aiclient/package.json
@@ -16,7 +16,8 @@
   },
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "!dist/test"
   ],
   "scripts": {
     "build": "npm run tsc",
