--- a/ts/packages/dispatcher/package.json
+++ b/ts/packages/dispatcher/package.json
@@ -24,6 +24,10 @@
     "./internal": "./dist/internal.js",
     "./explorer": "./dist/explorer.js"
   },
+  "files": [
+    "dist",
+    "!dist/test"
+  ],
   "scripts": {
     "build": "npm run tsc",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
