--- a/ts/packages/agents/agentUtils/graphUtils/package.json
+++ b/ts/packages/agents/agentUtils/graphUtils/package.json
@@ -28,7 +28,7 @@
     "tsc": "tsc -p src"
   },
   "dependencies": {
-    "@azure/identity": "4.2.1",
+    "@azure/identity": "^4.9.1",
     "@azure/identity-cache-persistence": "^1.1.1",
     "@azure/logger": "^1.1.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
