--- a/ts/packages/agents/montage/src/agent/montageManifest.json
+++ b/ts/packages/agents/montage/src/agent/montageManifest.json
@@ -7,7 +7,8 @@
     "schemaFile": "./montageActionSchema.ts",
     "schemaType": {
       "action": "MontageAction",
-      "activity": "MontageActivity"
+      "activity": "MontageActivity",
+      "entity": "MontageEntity"
     }
   }
 }
