--- a/ts/packages/agents/planVisualizer/package.json
+++ b/ts/packages/agents/planVisualizer/package.json
@@ -52,7 +52,7 @@
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "typescript": "~5.4.5",
     "vite": "^6.3.4"
   }
 }
