--- a/ts/packages/dispatcher/package.json
+++ b/ts/packages/dispatcher/package.json
@@ -49,7 +49,7 @@
     "chalk": "^5.4.1",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
-    "exifreader": "4.23.5",
+    "exifreader": "^4.30.1",
     "file-size": "^1.0.0",
     "glob": "^10.3.12",
     "image-memory": "workspace:*",
