--- a/ts/packages/knowledgeProcessor/package.json
+++ b/ts/packages/knowledgeProcessor/package.json
@@ -35,7 +35,7 @@
     "aiclient": "workspace:*",
     "common-utils": "workspace:*",
     "debug": "^4.4.0",
-    "exifreader": "4.23.5",
+    "exifreader": "^4.30.1",
     "sharp": "^0.33.5",
     "typeagent": "workspace:*",
     "typechat": "^0.1.1"
