--- a/ts/examples/chat/package.json
+++ b/ts/examples/chat/package.json
@@ -33,7 +33,7 @@
     "conversation-memory": "workspace:*",
     "dotenv": "^16.3.1",
     "examples-lib": "workspace:*",
-    "exifreader": "4.23.5",
+    "exifreader": "^4.30.1",
     "image-memory": "workspace:*",
     "interactive-app": "workspace:*",
     "knowledge-processor": "workspace:*",
