--- a/ts/packages/agents/planVisualizer/package.json
+++ b/ts/packages/agents/planVisualizer/package.json
@@ -22,13 +22,12 @@
     "build:client": "vite build",
     "build:server": "tsc -p src/view/server/tsconfig.json",
     "build:shared": "tsc -p src/view/shared/tsconfig.json",
-    "clean": "rimraf dist public/js *.tsbuildinfo *.done.build.log",
+    "clean": "rimraf dist",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npx nodemon --experimental-specifier-resolution=node dist/view/server/server.js 9052 \"",
     "dev:client": "vite dev",
     "dev:server": "tsc -p src/view/server/tsconfig.json --watch",
     "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
-    "preview:client": "vite preview",
     "start": "node --experimental-specifier-resolution=node dist/view/server/server.js"
   },
   "dependencies": {
