--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - siteTest
+      - siteTestCode
     # Only run when docs-related files change
     paths:
       - 'docs/**'
@@ -12,13 +14,12 @@ on:
 
 permissions:
   contents: write
+  id-token: write
+  pages: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./docs
     steps:
       - name: Checkout Repository 🛎️
         uses: actions/checkout@v3
@@ -26,23 +27,59 @@ jobs:
           # Full git history needed for proper timestamps
           fetch-depth: 0
 
+      - name: Check Repository Structure
+        run: |
+          echo "Repository root contents:"
+          ls -la
+        working-directory: .
+        
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: 'npm'
-          cache-dependency-path: './docs/package.json'
+          node-version: 18.x
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
+
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: Install Dependencies 📦
-        run: npm ci
+        run: pnpm install
 
       - name: Build Site 🔧
-        run: npm run build
+        run: pnpm run build
+        env:
+          # Explicitly set the GitHub repository name
+          GITHUB_REPOSITORY: ${{ github.repository }}
 
-      - name: Deploy to GitHub Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Debug Site Output 🔍
+        run: |
+          if [ -d "docs/_site" ]; then
+            echo "Contents of _site directory:"
+            ls -la _site
+          else
+            echo "ERROR: docs/_site directory not found"
+            exit 1
+          fi
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          folder: docs/_site      # The folder containing built site
-          branch: gh-pages        # The branch to deploy to
-          commit-message: "Deploy docs: ${{ github.event.head_commit.message }} [skip ci]"
-          clean: true
+           name: github-pages
+           path: docs/_site
+      - name: Deploy to GitHub Pages from artifacts
+        uses: actions/deploy-pages@v2 
