--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,6 +20,9 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: docs 
     steps:
       - name: Checkout Repository 🛎️
         uses: actions/checkout@v3
