--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -17,12 +17,25 @@ permissions:
   id-token: write
   pages: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: docs 
+    
+    permissions:
+      contents: write
+      id-token: write
+      pages: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout Repository 🛎️
         uses: actions/checkout@v3
@@ -85,4 +98,4 @@ jobs:
            name: github-pages
            path: docs/_site
       - name: Deploy to GitHub Pages from artifacts
-        uses: actions/deploy-pages@v2 
+        uses: actions/deploy-pages@v4
