--- a/docs/package.json
+++ b/docs/package.json
@@ -1,25 +1,33 @@
 {
   "name": "typeagent-docs",
   "version": "1.0.0",
-  "description": "Documentation for TypeAgent",
   "private": true,
-  "scripts": {
-    "build": "eleventy",
-    "start": "eleventy --serve",
-    "debug": "DEBUG=* eleventy"
-  },
+  "description": "Documentation for TypeAgent",
   "keywords": [
     "documentation",
     "eleventy",
     "typeagent"
   ],
+  "homepage": "https://github.com/microsoft/TypeAgent#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/TypeAgent.git",
+    "directory": "docs"
+  },
+  "license": "MIT",
+  "author": "Microsoft",
+  "scripts": {
+    "build": "eleventy",
+    "debug": "DEBUG=* eleventy",
+    "start": "eleventy --serve"
+  },
+  "dependencies": {
+    "markdown-it-replace-link": "^1.2.2"
+  },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.7",
     "slugify": "^1.6.6"
-  },
-  "dependencies": {
-    "markdown-it-replace-link": "^1.2.2"
   }
 }
