playing with bing with grounding

--- a/ts/package.json
+++ b/ts/package.json
@@ -62,7 +62,23 @@
         "x64",
         "arm64"
       ]
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@azure/msal-node-extensions",
+      "@azure/msal-node-runtime",
+      "@vscode/vsce-sign",
+      "better-sqlite3",
+      "canvas",
+      "electron",
+      "electron-winstaller",
+      "esbuild",
+      "exifreader",
+      "keytar",
+      "koffi",
+      "protobufjs",
+      "puppeteer",
+      "sharp"
+    ]
   },
   "peerDependencyRules": {
     "ignoreMissing": [
