--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -31,6 +31,8 @@
       "MSGRAPH_APP_CLIENTSECRET",
       "MSGRAPH_APP_TENANTID",
       "BING_API_KEY",
+      "BING_WITH_GROUNDING_KEY",
+      "BING_WITH_GROUNDING_ENDPOINT",
       "AZURE_MAPS_ENDPOINT",
       "AZURE_MAPS_CLIENTID",
       "AZURE_STORAGE_ACCOUNT",
