--- a/ts/packages/dispatcher/package.json
+++ b/ts/packages/dispatcher/package.json
@@ -40,6 +40,7 @@
     "tsc": "tsc -b"
   },
   "dependencies": {
+    "@azure/ai-agents": "^1.0.0-beta.3",
     "@azure/ai-projects": "^1.0.0-beta.8",
     "@azure/identity": "^4.10.0",
     "@azure/msal-node-extensions": "^1.5.0",
