bing with grounding now comes from .env

--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -33,6 +33,7 @@
       "BING_API_KEY",
       "BING_WITH_GROUNDING_KEY",
       "BING_WITH_GROUNDING_ENDPOINT",
+      "BING_WITH_GROUNDING_AGENT_ID",
       "AZURE_MAPS_ENDPOINT",
       "AZURE_MAPS_CLIENTID",
       "AZURE_STORAGE_ACCOUNT",
