removed bing-api-key from getKeys

--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -30,7 +30,6 @@
       "MSGRAPH_APP_CLIENTID",
       "MSGRAPH_APP_CLIENTSECRET",
       "MSGRAPH_APP_TENANTID",
-      "BING_API_KEY",
       "BING_WITH_GROUNDING_KEY",
       "BING_WITH_GROUNDING_ENDPOINT",
       "BING_WITH_GROUNDING_AGENT_ID",
@@ -40,7 +39,7 @@
       "AZURE_STORAGE_CONTAINER"
     ],
     "private": ["SPOTIFY_APP_CLI", "SPOTIFY_APP_CLISEC", "SPOTIFY_APP_PORT"],
-    "delete": ["MSGRAPH_APP_PASSWD", "MSGRAPH_APP_USERNAME"]
+    "delete": ["MSGRAPH_APP_PASSWD", "MSGRAPH_APP_USERNAME", "BING_API_KEY"]
   },
   "vault": {
     "shared": "aisystems"
