--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -352,6 +352,28 @@
       "program": "${workspaceFolder}/examples/commandHistogram/src/main.ts",
       "console": "externalTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
-    },    
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch azureDeploy (create)",
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}",
+      "program": "tools/scripts/azureDeploy.mjs",
+      "args": ["create", "--location", "eastus"],
+      "console": "externalTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch azureDeploy (delete)",
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}",
+      "program": "tools/scripts/azureDeploy.mjs",
+      "args": ["delete", "--location", "eastus"],
+      "console": "externalTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },         
   ]
 }
