Replacing Bing Search with "Grounding with Bing" (#1193)
In this PR we have replaced Bing Search with "Grounding With Bing".  

- Bing search & dispatcher lookup replaced with Grounding With Bing
- ARM templates updated accordingly but incomplete due to "Grounding
With Bing" not fully supporting deployment at this time.
- Updated documentation and instructions for completing grounding setup.
- Added deprecation warnings to Bing Search code paths
- Image Agent internet lookup deprecated...will fail to return results
moving forward.


![image](https://github.com/user-attachments/assets/cc9dda14-76fd-4edf-8291-01ffdbe2761d)

--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -352,6 +352,39 @@
       "program": "${workspaceFolder}/examples/commandHistogram/src/main.ts",
       "console": "externalTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
-    },    
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch azureDeploy (create)",
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}",
+      "program": "tools/scripts/azureDeploy.mjs",
+      "args": ["create", "--location", "eastus"],
+      "console": "externalTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch azureDeploy (delete)",
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}",
+      "program": "tools/scripts/azureDeploy.mjs",
+      "args": ["delete", "--location", "eastus"],
+      "console": "externalTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch repo policy check",
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}",
+      "program": "tools/scripts/repo-policy-check.mjs",
+      "args": [],
+      "console": "externalTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"]
+    },              
   ]
 }
