--- a/ts/packages/agents/chat/package.json
+++ b/ts/packages/agents/chat/package.json
@@ -24,6 +24,9 @@
     "tsc": "tsc -b"
   },
   "dependencies": {
+    "@azure/ai-agents": "^1.0.0-beta.3",
+    "@azure/ai-projects": "^1.0.0-beta.8",
+    "@azure/identity": "^4.10.0",
     "@typeagent/agent-sdk": "workspace:*",
     "aiclient": "workspace:*",
     "common-utils": "workspace:*",
