--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -30,14 +30,15 @@
       "MSGRAPH_APP_CLIENTID",
       "MSGRAPH_APP_CLIENTSECRET",
       "MSGRAPH_APP_TENANTID",
-      "BING_API_KEY",
+      "BING_WITH_GROUNDING_ENDPOINT",
+      "BING_WITH_GROUNDING_AGENT_ID",
       "AZURE_MAPS_ENDPOINT",
       "AZURE_MAPS_CLIENTID",
       "AZURE_STORAGE_ACCOUNT",
       "AZURE_STORAGE_CONTAINER"
     ],
     "private": ["SPOTIFY_APP_CLI", "SPOTIFY_APP_CLISEC", "SPOTIFY_APP_PORT"],
-    "delete": ["MSGRAPH_APP_PASSWD", "MSGRAPH_APP_USERNAME"]
+    "delete": ["MSGRAPH_APP_PASSWD", "MSGRAPH_APP_USERNAME", "BING_API_KEY"]
   },
   "vault": {
     "shared": "aisystems"
