--- a/ts/.vscode/launch.json
+++ b/ts/.vscode/launch.json
@@ -385,6 +385,15 @@
       "args": [],
       "console": "externalTerminal",
       "outFiles": ["${workspaceFolder}/**/*.js"]
-    },              
+    },           {
+      "name": "Launch MCP Memory",
+      "type": "node",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/examples/mcpMemory/src/main.ts",
+      "console": "externalTerminal",
+      "outFiles": ["${workspaceFolder}/**/*.js"],
+    },
+       
   ]
 }
