--- a/ts/examples/mcpMemory/package.json
+++ b/ts/examples/mcpMemory/package.json
@@ -15,8 +15,8 @@
     "build": "npm run tsc",
     "postbuild": "copyfiles -u 1 \"src/**/*Schema*.ts\" dist",
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
-    "prettier": "prettier --check . --ignore-path ../../../.prettierignore",
-    "prettier:fix": "prettier --write . --ignore-path ../../../.prettierignore",
+    "prettier": "prettier --check . --ignore-path ../../.prettierignore",
+    "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
     "tsc": "tsc -b"
   },
   "dependencies": {
