--- a/python/ta/pyproject.toml
+++ b/python/ta/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
   { name = "Umesh Madan" },
   { name = "Guido van Rossum" },
 ]
-requires-python = "==3.12.7"
+requires-python = ">=3.12.7"
 dependencies = [
   "azure-identity>=1.22.0",
   "black>=25.1.0",
