--- a/ts/examples/schemaStudio/package.json
+++ b/ts/examples/schemaStudio/package.json
@@ -18,8 +18,8 @@
     "clean": "rimraf --glob dist *.tsbuildinfo *.done.build.log",
     "prettier": "prettier --check . --ignore-path ../../.prettierignore",
     "prettier:fix": "prettier --write . --ignore-path ../../.prettierignore",
-    "tsc": "tsc -p src",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "tsc": "tsc -p src"
   },
   "dependencies": {
     "action-schema": "workspace:*",
