--- a/ts/packages/agents/browser/src/agent/manifest.json
+++ b/ts/packages/agents/browser/src/agent/manifest.json
@@ -5,7 +5,10 @@
   "schema": {
     "description": "Browser agent that allows you control an existing browser window and perform actions such as opening a new tab, closing a tab, scrolling, zooming and navigating to a specific URL.",
     "schemaFile": "./actionsSchema.mts",
-    "schemaType": "BrowserActions"
+    "schemaType": {
+      "action": "BrowserActions",
+      "entity": "BrowserEntities"
+    }
   },
   "subActionManifests": {
     "externalBrowser": {
