Add 'make demo' to the Makefile

--- a/python/ta/Makefile
+++ b/python/ta/Makefile
@@ -18,6 +18,10 @@ check: venv
 test: venv
 	.venv/bin/python -m pytest test
 
+.PHONY: demo
+demo: venv
+	.venv/bin/python -m typeagent.demo
+
 .PHONY: build
 build: venv
 	.venv/bin/python -m build --wheel
