first pass working, keys added to vault

--- a/ts/tools/scripts/getKeys.config.json
+++ b/ts/tools/scripts/getKeys.config.json
@@ -32,6 +32,8 @@
       "MSGRAPH_APP_TENANTID",
       "BING_WITH_GROUNDING_ENDPOINT",
       "BING_WITH_GROUNDING_AGENT_ID",
+      "BING_WITH_GROUNDING_URL_RESOLUTION_AGENT_ID",
+      "BING_WITH_GROUNDING_URL_RESOLUTION_CONNECTION_ID",
       "AZURE_MAPS_ENDPOINT",
       "AZURE_MAPS_CLIENTID",
       "AZURE_STORAGE_ACCOUNT",
