--- a/ts/packages/knowProTest/package.json
+++ b/ts/packages/knowProTest/package.json
@@ -34,7 +34,8 @@
     "aiclient": "workspace:*",
     "interactive-app": "workspace:*",
     "knowpro": "workspace:*",
-    "typeagent": "workspace:*"
+    "typeagent": "workspace:*",
+    "typechat": "0.1.1"
   },
   "devDependencies": {
     "copyfiles": "^2.4.1",
