Added test cases for website visit memory

--- a/ts/packages/memory/website/tsconfig.json
+++ b/ts/packages/memory/website/tsconfig.json
@@ -5,7 +5,8 @@
   },
   "include": [],
   "references": [
-    { "path": "./src" }
+    { "path": "./src" },
+    { "path": "./test" }
   ],
   "ts-node": {
     "esm": true
